name:                HulkanVulkan3D
version:             0.2.0.0
synopsis:            Use cases for vulkan-api
description:         Some examples of using vulkan-api bindings.
homepage:            https://github.com/ubuntunux/HulkanEngine3D
license:             BSD3
license-file:        LICENSE
author:              Ubuntunux
maintainer:          Ubuntunux@gmail.com
copyright:           Copyright: (c) 2019 Ubuntunux
category:            vulkan, bsd3, graphics, library, opengl, 3D engine
build-type:          Simple
cabal-version:       >=1.22

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

executable main
    hs-source-dirs:   .
    main-is:          Main.hs
    ghc-options:      -threaded
    other-modules:    Library.Application
                      Library.Constants
                      Library.Shader
                      Library.Utils
                      Library.Vulkan
                      Library.Vulkan.Buffer
                      Library.Resource
                      Library.Resource.ObjLoader
    build-depends:    base >= 4.11 && < 5
                      , vulkan-api >= 1.3.0.0
                      , GLFW-b >= 3.2.1
                      , containers
                      , template-haskell
                      , directory
                      , process
                      , filepath
                      , transformers
                      , mtl
                      , monad-logger
                      , easytensor >=2.0.1 && < 3
                      , easytensor-vulkan >=2.0.1 && < 3
                      , dimensions >=2 && < 3
                      , time
                      , JuicyPixels
                      , vector
                      , wavefront
    default-language: Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2

source-repository head
  type:     git
  location: https://github.com/ubuntunux/HulkanEngine3D
  subdir:   .
