name:                HulkanVulkan3D
version:             0.2.0.0
synopsis:            Use cases for vulkan-api
description:         Some examples of using vulkan-api bindings.
homepage:            https://github.com/ubuntunux/HulkanEngine3D
license:             BSD3
license-file:        LICENSE
author:              Ubuntunux
maintainer:          Ubuntunux@gmail.com
copyright:           Copyright: (c) 2019 Ubuntunux
category:            vulkan, bsd3, graphics, library, opengl, 3D engine
build-type:          Simple
cabal-version:       >=1.22

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

executable main
    hs-source-dirs:   .
    main-is:          Main.hs
    ghc-options:      -threaded
    other-modules:    HulkanEngine3D.Application.Application
                      HulkanEngine3D.Application.Command
                      HulkanEngine3D.Application.Input
                      HulkanEngine3D.Application.Editor
                      HulkanEngine3D.Application.SceneManager
                      HulkanEngine3D.Constants
                      HulkanEngine3D.Render.Animation
                      HulkanEngine3D.Render.Camera
                      HulkanEngine3D.Render.ImageSampler
                      HulkanEngine3D.Render.Light
                      HulkanEngine3D.Render.Material
                      HulkanEngine3D.Render.MaterialInstance
                      HulkanEngine3D.Render.Mesh
                      HulkanEngine3D.Render.Model
                      HulkanEngine3D.Render.PostProcess
                      HulkanEngine3D.Render.PushConstant
                      HulkanEngine3D.Render.RenderPassCreateInfo
                      HulkanEngine3D.Render.RenderPassCreateInfo.CompositeGBuffer
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderObject
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderDebug
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderFinal
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderMotionBlur
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderSSAO
                      HulkanEngine3D.Render.RenderPassCreateInfo.RenderShadow
                      HulkanEngine3D.Render.RenderTarget
                      HulkanEngine3D.Render.RenderTargetDeclaration
                      HulkanEngine3D.Render.Renderer
                      HulkanEngine3D.Render.RenderElement
                      HulkanEngine3D.Render.RenderObject
                      HulkanEngine3D.Render.Spline
                      HulkanEngine3D.Render.TransformObject
                      HulkanEngine3D.Render.UniformBufferDatas
                      HulkanEngine3D.Resource.ColladaLoader
                      HulkanEngine3D.Resource.ObjLoader
                      HulkanEngine3D.Resource.Resource
                      HulkanEngine3D.Resource.ResourceData
                      HulkanEngine3D.Resource.TextureGenerator
                      HulkanEngine3D.Utilities.BoundingBox
                      HulkanEngine3D.Utilities.Logger
                      HulkanEngine3D.Utilities.DataFrame
                      HulkanEngine3D.Utilities.Math
                      HulkanEngine3D.Utilities.System
                      HulkanEngine3D.Utilities.Vector
                      HulkanEngine3D.Vulkan.Vulkan
                      HulkanEngine3D.Vulkan.Buffer
                      HulkanEngine3D.Vulkan.CommandBuffer
                      HulkanEngine3D.Vulkan.Descriptor
                      HulkanEngine3D.Vulkan.Device
                      HulkanEngine3D.Vulkan.FrameBuffer
                      HulkanEngine3D.Vulkan.GeometryBuffer
                      HulkanEngine3D.Vulkan.RenderPass
                      HulkanEngine3D.Vulkan.Queue
                      HulkanEngine3D.Vulkan.UniformBuffer
                      HulkanEngine3D.Vulkan.Shader
                      HulkanEngine3D.Vulkan.SwapChain
                      HulkanEngine3D.Vulkan.Sync
                      HulkanEngine3D.Vulkan.Texture
    build-depends:    base
                      , aeson
                      , array
                      , binary
                      , bytestring
                      , containers
                      , directory
                      , dlist
                      , filepath
                      , hashable
                      , hashtables
                      , hxt
                      , JuicyPixels
                      , monad-logger
                      , mtl
                      , primitive
                      , process
                      , regex-posix
                      , template-haskell
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , vector
                      , random
                      , wavefront
                      , vulkan-api >= 1.3.0.0
                      , GLFW-b
                      , easytensor >=2.1 && < 3
                      , easytensor-vulkan >=2.0.2 && < 3
                      , dimensions >=2.1 && < 3
                      , threepenny-gui
                      , open-browser
    default-language: Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall -Wno-orphans -Wno-unused-top-binds -Wno-unused-do-bind -Wno-unused-matches -Wno-name-shadowing -Wno-unused-local-binds -Werror
    else
        ghc-options: -O2

source-repository head
  type:     git
  location: https://github.com/ubuntunux/HulkanEngine3D
  subdir:   .
